# VoiceToText

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  migrate_code.sh  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: MIGRATION.md  PLATFORMS.md
